# cadqueryResouce

./: .gitignore  birdhouse.py  pyproject.toml
cadquery-contrib/: Braille.py  Involute_Gear.py  Iqon-Building.py  Numpy.py  Panel_with_Various_Holes_for_Connector_Installation.py  Remote_Enclosure.py  Shelled_Cube_Inside_Chamfer_With_Logical_Selector_Operators.py  Tetrakaidecahedron.py  Thread.py
cadquery-contrib-examples/: Classic_OCC_Bottle.py  Parametric_Enclosure.py  Reinforce_Junction_UsingFillet.py  Resin_Mold.py  cylindrical_gear.py  test.py  tray.py  truss-gherkin-building.py
cadquery-examples/: Ex001_Simple_Block.py  Ex002_Block_With_Bored_Center_Hole.py  Ex003_Pillow_Block_With_Counterbored_Holes.py  Ex004_Extruded_Cylindrical_Plate.py  Ex005_Extruded_Lines_and_Arcs.py  Ex006_Moving_the_Current_Working_Point.py  Ex007_Using_Point_Lists.py  Ex008_Polygon_Creation.py  Ex009_Polylines.py  Ex010_Defining_an_Edge_with_a_Spline.py  Ex011_Mirroring_Symmetric_Geometry.py  Ex012_Creating_Workplanes_on_Faces.py  Ex013_Locating_a_Workplane_on_a_Vertex.py  Ex014_Offset_Workplanes.py  Ex015_Rotated_Workplanes.py  Ex017_Shelling_to_Create_Thin_Features.py  Ex018_Making_Lofts.py  Ex019_Counter_Sunk_Holes.py  Ex020_Rounding_Corners_with_Fillets.py  Ex021_Splitting_an_Object.py  Ex022_Revolution.py  Ex023_Sweep.py  Ex024_Sweep_With_Multiple_Sections.py  Ex025_Swept_Helix.py  Ex026_Case_Seam_Lip.py  Ex100_Lego_Brick.py  Ex101_InterpPlate.py
examples/: 3D_Printer_Extruder_Support.py  Involute_Gear.py  Panel_with_Various_Holes_for_Connector_Installation.py  door.py  (+4 more)
(+46 files in other folders)
